--- a/Modal/style.css
+++ b/Modal/style.css
@@ -154,24 +154,75 @@ main {
 
 /*
 =============== 
-´´´modal´´´
+    modal
 ===============
 */
 .hero {
-    min-height: 100vh;
-    background: url("./hero_image.jpg") center/cover no-repeat;
-    place-items: center;
-    display: grid;
+  min-height: 100vh;
+  background: url("./hero_image.jpg") center/cover no-repeat;
+  place-items: center;
+  display: grid;
 }
 .banner {
-    background: var(--clr-primary-1);
-    border-radius: var(--radius);
-    box-shadow: var(--light-shadow);
-    text-align: center;
-    padding: 4rem 0;
-    max-width: var(--fixed-width);
-    width: 90vw;
+  background: var(--clr-white);
+  border-radius: var(--radius);
+  box-shadow: var(--light-shadow);
+  text-align: center;
+  padding: 4rem 0;
+  max-width: var(--fixed-width);
+  width: 90vw;
 }
 .btn {
-    
+  font-size: 1rem;
+  margin-top: 2rem;
+  background: var(--clr-grey-8);
+  border-color: var(--clr-grey-3);
+}
+.btn:hover {
+  background: transparent;
+  border-color: transparent;
+  cursor: pointer;
+}
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  place-items: center;
+  width: 100%;
+  height: 100%;
+  background: rgba(73, 166, 233, 0.5);
+  display: grid;
+  transition: var(--transition);
+  visibility: hidden;
+  z-index: -10;
+}
+/* OPEN/CLOSE MODAL */
+.open-modal {
+  visibility: visible;
+  z-index: 10;
+}
+.modal-container {
+  background: var(--clr-white);
+  border-radius: var(--radius);
+  width: 90vw;
+  height: 32vh;
+  max-width: var(--fixed-width);
+  text-align: center;
+  display: grid;
+  place-items: center;
+  position: relative;
+}
+.close-btn {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-size: 1.5rem;
+  transition: var(--transition);
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+}
+.close-btn:hover {
+  transform: scale(2);
+  color: var(--clr-red-dark);
 }
