--- a/Our Menu/style.css
+++ b/Our Menu/style.css
@@ -80,6 +80,12 @@ ul {
 a {
   text-decoration: none;
 }
+img:not(.logo) {
+  width: 100%;
+}
+img {
+  display: block;
+}
 h1,
 h2,
 h3,
@@ -105,7 +111,6 @@ h4 {
 p {
   margin-bottom: 1.25rem;
   color: var(--clr-grey-5);
-  text-transform: capitalize;
 }
 @media screen and (min-width: 800px) {
   h1 {
@@ -131,24 +136,30 @@ p {
   }
 }
 /*  global classes */
-
+.btn {
+  text-transform: uppercase;
+  background: transparent;
+  color: var(--clr-black);
+  padding: 0.375rem 0.75rem;
+  letter-spacing: var(--spacing);
+  display: inline-block;
+  transition: var(--transition);
+  font-size: 0.875rem;
+  border: 2px solid var(--clr-black);
+  cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  border-radius: var(--radius);
+}
+.btn:hover {
+  color: var(--clr-white);
+  background: var(--clr-black);
+}
 /* section */
 .section {
   padding: 5rem 0;
 }
 
-.section-center {
-  width: 90vw;
-  margin: 0 auto;
-  max-width: 1170px;
-}
-@media screen and (min-width: 992px) {
-  .section-center {
-    width: 95vw;
-  }
-}
 main {
-
   min-height: 100vh;
   display: grid;
   place-items: center;
@@ -159,3 +170,91 @@ main {
     Menu
 ===============
 */
+.menu {
+  padding: 5rem 0;
+}
+.title {
+    text-align: center;
+    margin-bottom: 2rem;
+}
+.underline {
+  background: var(--clr-grey-1);
+  height: .25rem;
+  width: 18rem;
+  margin: auto;
+}
+.section-center {
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 1170px;
+  display: grid;
+  gap: 3rem 2rem;
+  justify-items: center;
+}
+.menu-item {
+  display: grid;
+  gap: 1rem 2rem;
+  max-width: 25rem;
+}
+.photo {
+  object-fit: cover;
+  height: 200px;
+  border: 0.25rem solid grey;
+  border-radius: var(--radius);
+}
+.item-info header {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 0.5px dotted var(--clr-gold);
+}
+.item-info h4 {
+  margin-bottom: 0.5rem;
+}
+.price {
+  color: var(--clr-gold);
+}
+.item-description {
+  margin-bottom: 0;
+  padding-top: 1rem;
+}
+.btn-container {
+  margin-bottom: 4rem;
+  display: flex;
+  justify-content: center;
+}
+.filter-btn {
+  background: transparent;
+  border-color: var(--clr-gold);
+  font-size: 1rem;
+  text-transform: capitalize;
+  margin: 0 0.5rem;
+  letter-spacing: 1px;
+  border-radius: var(--radius);
+  padding: 0.375rem 0.75rem;
+  color: var(--clr-gold);
+  cursor: pointer;
+  transition: var(--transition);
+}
+.filter-btn:hover {
+  background: var(--clr-gold);
+  color: var(--clr-white);
+}
+@media screen and (min-width: 768px) {
+  .menu-item {
+    grid-template-columns: 275px 1fr;
+    gap: 0 1.25rem;
+    max-width: 40rem;
+  }
+  .photo {
+    height: 175px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .section-center {
+    width: 95vw;
+    grid-template-columns: 1fr 1fr;
+  }
+  .photo {
+    height: 150px;
+  }
+}
