--- a/Our Menu/style.css
+++ b/Our Menu/style.css
@@ -217,21 +217,21 @@ main {
   margin-bottom: 0;
   padding-top: 1rem;
 }
-.btn-container {
+.button-container {
   margin-bottom: 4rem;
   display: flex;
   justify-content: center;
 }
 .filter-btn {
   background: transparent;
-  border-color: var(--clr-gold);
+  border-color: grey;
   font-size: 1rem;
   text-transform: capitalize;
   margin: 0 0.5rem;
   letter-spacing: 1px;
   border-radius: var(--radius);
   padding: 0.375rem 0.75rem;
-  color: var(--clr-gold);
+  color: var(--clr-grey-1);
   cursor: pointer;
   transition: var(--transition);
 }
