--- a/Scroll/style.css
+++ b/Scroll/style.css
@@ -154,6 +154,12 @@ p {
     color: var(--clr-white);
     background: var(--clr-black);
 }
+.btn-white {
+    color: var(--clr-white);
+    border-color: var(--clr-white);
+    border-radius: 0;
+    padding: 0.5rem 1rem;
+}
 /* section */
 .section {
     padding: 5rem 0;
