--- a/Scroll/style.css
+++ b/Scroll/style.css
@@ -184,8 +184,8 @@ nav {
     padding: 1rem 1.5rem;
 }
 .logo {
-    height: 100px;
-    margin-left: -22px;
+    height: 70px;
+    /* margin-left: -10px; */
 }
 .nav-toggle {
     font-size: 1.5rem;
@@ -248,7 +248,7 @@ nav {
     nav {
         background: transparent;
         width: 90vw;
-        max-width: 1170px;
+        max-width: 3000px;
         margin: 0 auto;
         display: flex;
         align-items: center;
