--- a/Tab/style.css
+++ b/Tab/style.css
@@ -187,7 +187,16 @@ main {
   object-fit: cover;
   height: 20rem;
 }
-
+@media screen and (min-width: 992px) {
+  .about-img {
+    margin-bottom: 0;
+  }
+  .about-center {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 2rem;
+  }
+}
 .about {
   background: var(--clr-white);
   border-radius: var(--radius);
