--- a/Tab/style.css
+++ b/Tab/style.css
@@ -159,6 +159,16 @@ p {
   padding: 5rem 0;
   
 }
+.section-center {
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 1170px;
+}
+@media screen and (min-width: 992px) {
+  .section-center {
+    width: 95vw;
+  }
+}
 
 main {
   min-height: 100vh;
