--- a/Grocery Bud/style.css
+++ b/Grocery Bud/style.css
@@ -192,6 +192,25 @@ main {
 .section-center:hover {
     box-shadow: var(--dark-shadow);
 }
+.alert {
+  margin-bottom: 1rem;
+  height: 1.5rem;
+  display: grid;
+  align-items: center;
+  text-align: center;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+  letter-spacing: var(--spacing);
+  text-transform: capitalize;
+}
+.alert-danger {
+  color: #721c24;
+  background: #f8d7da;
+}
+.alert-success {
+  color: #155724;
+  background: #d4edda;
+}
 .grocery-form h3 {
     color: var(--clr-primary-1);
     margin-bottom: 1.5rem;
