--- a/Nav_Bar/style.css
+++ b/Nav_Bar/style.css
@@ -210,7 +210,7 @@ nav{
   /* to hide the links for the smaller screen */
   transition: var(--transition);
 }
-/* this class is generated in the navbar.js file */
+/* this class will be called by javascript. when displaying the links */
 .show-links {
   height: 10rem;
 }
@@ -221,6 +221,7 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    /*space-between is used to separate the contents leaving full space in between*/
     padding: 1rem;
   }
   .nav-header{
@@ -245,7 +246,6 @@ nav{
     padding: 0;
     background: transparent;
     color: var(--clr-primary-5);
-
   }
   .icons {
     display: flex;
